<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_top_main"
                    android:layout_width="0dp"
                    android:layout_height="122dp"
                    android:src="@drawable/top_container_solid"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/main" />

                <TextView
                    android:id="@+id/tv_main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="23dp"
                    android:text="@string/main_welcome_msg"
                    android:textColor="@color/md_theme_surface"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_top_main"
                    app:layout_constraintStart_toStartOf="@+id/iv_top_main"
                    app:layout_constraintTop_toTopOf="@+id/iv_top_main"
                    app:layout_constraintVertical_bias="0.32" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/container_gradient"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_main_scan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/scan_trash"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/md_theme_primary"/>

                    <ImageView
                        android:id="@+id/iv_main_trash"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/container_solid_surface"
                        android:src="@drawable/ic_trash_24_primary"
                        android:contentDescription="@string/main" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_gallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/ic_image_search_24_surface"
                            android:text="@string/gallery"
                            android:textColor="@color/md_theme_surface"
                            style="?android:attr/buttonBarButtonStyle" />

                        <Button
                            android:id="@+id/btn_camera"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/camera"
                            android:drawableTop="@drawable/ic_photo_camera_24_surface"
                            android:textColor="@color/md_theme_surface"

                            style="?android:attr/buttonBarButtonStyle"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_scan"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/md_theme_surface"
                        android:text="@string/scan_now"
                        android:layout_gravity="center"
                        android:textColor="@color/md_theme_primary"/>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/article"
                android:textColor="@color/md_theme_primary"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:orientation="horizontal" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>